welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value temps1
  if ((temp1<=0 && temp2>=100)||(temps1>=100 && temps2<=0)){return true}
                                 ^icyHot:2: error: not found: value temps2
  if ((temp1<=0 && temp2>=100)||(temps1>=100 && temps2<=0)){return true}
                                                ^